--- a/loops.html
+++ b/loops.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-
+    <h1>WHILE LOOP</h1>
     <script>
         var age = 0;
         while (age < 21) {
@@ -26,6 +26,7 @@
             document.write('<br>');
         }
     </script>
+    <h1>FOR LOOP</h1>
 
 </body>
 </html>
